create separate header

--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
 </head>
 
 <body>
-    <div class="calculator">
+    <header>
         <h2>JavaScript Calculator</h2>
+    </header>
+    <div class="calculator">
         <form name="forms">
             <input type="text" class="current-output" placeholder="0" readonly>
             <input type="button" class="clear" value="C">
