--- a/index.html
+++ b/index.html
@@ -10,32 +10,34 @@
 </head>
 
 <body>
-    <header>
-        <h2>JavaScript Calculator</h2>
-    </header>
-    <div class="calculator">
-        <form name="forms">
-            <input type="text" class="current-output" placeholder="0" readonly>
-            <input type="button" class="clear" value="C">
-            <input type="button" class="pl-minus" value="+/-">
-            <input type="button" class="percent" value="%">
-            <input type="button" class="operator" value="/">
-            <input type="button" class="number" value="7">
-            <input type="button" class="number" value="8">
-            <input type="button" class="number" value="9">
-            <input type="button" class="operator" value="*">
-            <input type="button" class="number" value="4">
-            <input type="button" class="number" value="5">
-            <input type="button" class="number" value="6">
-            <input type="button" class="operator" value="-">
-            <input type="button" class="number" value="1">
-            <input type="button" class="number" value="2">
-            <input type="button" class="number" value="3">
-            <input type="button" class="operator" value="+">
-            <input type="button" class="decimal" value=".">
-            <input type="button" class="number" value="0">
-            <input type="button" class="operator-result" value="=">
-        </form>
+    <div class="container">
+        <header>
+            <h2>JavaScript Calculator</h2>
+        </header>
+        <div class="calculator">
+            <form name="forms">
+                <input type="text" class="current-output" placeholder="0" readonly>
+                <input type="button" class="clear" value="C">
+                <input type="button" class="pl-minus" value="+/-">
+                <input type="button" class="percent" value="%">
+                <input type="button" class="operator" value="/">
+                <input type="button" class="number" value="7">
+                <input type="button" class="number" value="8">
+                <input type="button" class="number" value="9">
+                <input type="button" class="operator" value="*">
+                <input type="button" class="number" value="4">
+                <input type="button" class="number" value="5">
+                <input type="button" class="number" value="6">
+                <input type="button" class="operator" value="-">
+                <input type="button" class="number" value="1">
+                <input type="button" class="number" value="2">
+                <input type="button" class="number" value="3">
+                <input type="button" class="operator" value="+">
+                <input type="button" class="decimal" value=".">
+                <input type="button" class="number" value="0">
+                <input type="button" class="operator-result" value="=">
+            </form>
+        </div>
     </div>
     <script src="app.js"></script>
 </body>
