--- a/index.html
+++ b/index.html
@@ -20,21 +20,21 @@
                 <input type="button" class="clear" value="C">
                 <input type="button" class="pl-minus" value="+/-">
                 <input type="button" class="percent" value="%">
-                <input type="button" class="operator" id="divide" value="/">
-                <input type="button" class="number" id="n7" value="7">
-                <input type="button" class="number" id="n8" value="8">
-                <input type="button" class="number" id="n9" value="9">
-                <input type="button" class="operator" id="multiply" value="*">
-                <input type="button" class="number" id="n4" value="4">
-                <input type="button" class="number" id="n5" value="5">
-                <input type="button" class="number" id="n6" value="6">
-                <input type="button" class="operator" id="subtract" value="-">
-                <input type="button" class="number" id="n1" value="1">
-                <input type="button" class="number" id="n2" value="2">
-                <input type="button" class="number" id="n3" value="3">
-                <input type="button" class="operator" id="add" value="+">
+                <input type="button" class="operator" value="/">
+                <input type="button" class="number" value="7">
+                <input type="button" class="number" value="8">
+                <input type="button" class="number" value="9">
+                <input type="button" class="operator" value="*">
+                <input type="button" class="number" value="4">
+                <input type="button" class="number" value="5">
+                <input type="button" class="number" value="6">
+                <input type="button" class="operator" value="-">
+                <input type="button" class="number" value="1">
+                <input type="button" class="number" value="2">
+                <input type="button" class="number" value="3">
+                <input type="button" class="operator" value="+">
                 <input type="button" class="decimal" value=".">
-                <input type="button" class="number" id="n0" value="0">
+                <input type="button" class="number" value="0">
                 <input type="button" class="operator-result" value="=">
             </form>
         </div>
