--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <input type="button" class="number" value="2">
                 <input type="button" class="number" value="3">
                 <input type="button" class="operator" value="+">
-                <input type="button" class="decimal" value=".">
+                <input type="button" class="number" value=".">
                 <input type="button" class="number" value="0">
                 <input type="button" class="operator-result" value="=">
             </form>
